# governance_as_code

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: release.yml
include/governance/: compliance.hpp  json.hpp  policy_engine.hpp  types.hpp
src/: compliance.cpp  main.cpp  policy_engine.cpp
tests/: CMakeLists.txt  test_compliance.cpp  test_policy_engine.cpp
